Edit the interest details to correct some sentences

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                     <ul>
                         <li>Earn 6.5% interest on savings up to P49,700.</li>
                         <li>Excess of P49,700 will not earn interest.</li>
-                        <li>The maximum limit for the savings account is capped at P50,000.</li>
+                        <li>Maximum limit for the savings account is capped at P50,000.</li>
                         <li>Monthly crediting of interest earnings.</li>
                     </ul>
                 </div>
@@ -122,8 +122,8 @@
                 </div>      
                 <div class="key-features">
                     <ul>
-                        <li>Transfer to other OwnBank using mobile number.</li>
-                        <li>Mobile load, Game credits, and Data plans services.</li>
+                        <li>Transfer to other OwnBank accounts using mobile number.</li>
+                        <li>Access mobile load, Game credits, and Data plans services.</li>
                         <li>Learn more <a href="https://www.ownbank.com/help-center" target="_blank">here.</a></li>
                     </ul>
                 </div>        
@@ -144,11 +144,11 @@
                 <div class="interest-details">
                     <ul>
                         <p class="details-header">Promo runs from Nov. 1 to Dec. 31, 2023:</p>
-                        <li>All accounts will earn 5% p.a interest on all savings balances(no limit) for the months of Nov. and Dec.</li>
-                        <li>Earn +1% p.a. interest by growing your Total ADB by at least Php 5,000.</li>
-                        <li>Earn +2% p.a. interest by using your Virtual Debit Card.</li>
-                        <li>Earn +3% p.a. interest by transacting using Virtual Debit Card, Bills payment or Buy Load.</li>
-                        <li>Earn +4% p.a. interest by growing your Total ADB by at least Php 50,000.</li>
+                        <li>All accounts will earn 5% p.a. interest on all savings balances(no limit) for the months of Nov. and Dec.</li>
+                        <li>Earn +1% p.a. by growing your Total ADB by at least Php 5,000.</li>
+                        <li>Earn +2% p.a. by using your Virtual Debit Card.</li>
+                        <li>Earn +3% p.a. by transacting using Virtual Debit Card, Bills payment or Buy Load.</li>
+                        <li>Earn +4% p.a. by growing your total ADB by at least Php 50,000.</li>
                         <li>Learn more <a href="https://www.cimbbank.com.ph/en/promotions/promotions/5-year-anniversary-deposit-promo.html" target="_blank">here.</a></li>
                     </ul>
                 </div>
@@ -161,7 +161,7 @@
                         <li>Access your account through the GCash and CIMB app.</li>
                         <li>Request and download Bank Certificate.</li>
                         <li>Physical and Virtual Debit Card available through the CIMB app.</li>
-                        <li>Account holders who maintain a minimum ADB of P5,000 for one month will be able to enjoy Free life insurance.</li>
+                        <li>Account holders who maintain a minimum ADB of P5,000 for one month will be able to enjoy free life insurance.</li>
                         <li>Learn more <a href="https://www.cimbbank.com.ph/en/digital-banking/our-products/gsave.html" target="_blank">here.</a></li>
                     </ul>
                 </div>       
@@ -184,10 +184,10 @@
                     <ul>
                         <p class="details-header">Promo runs from Nov. 1 to Dec. 31, 2023:</p>
                         <li>All accounts will earn 5% p.a interest on all savings balances(no limit) for the months of Nov. and Dec.</li>
-                        <li>Earn +1% p.a. interest by growing your Total ADB by at least Php 5,000.</li>
-                        <li>Earn +2% p.a. interest by using your Virtual Debit Card.</li>
-                        <li>Earn +3% p.a. interest by transacting using Virtual Debit Card, Bills payment or Buy Load.</li>
-                        <li>Earn +4% p.a. interest by growing your Total ADB by at least Php 50,000.</li>
+                        <li>Earn +1% p.a. by growing your Total ADB by at least Php 5,000.</li>
+                        <li>Earn +2% p.a. by using your Virtual Debit Card.</li>
+                        <li>Earn +3% p.a. by transacting using Virtual Debit Card, Bills payment or Buy Load.</li>
+                        <li>Earn +4% p.a. by growing your total ADB by at least Php 50,000.</li>
                         <li>Learn more <a href="https://www.cimbbank.com.ph/en/promotions/promotions/5-year-anniversary-deposit-promo.html" target="_blank">here.</a></li>
                     </ul>
                 </div>
@@ -200,7 +200,7 @@
                         <li>Access your account through the CIMB app.</li>
                         <li>Request and download Bank Certificate.</li>
                         <li>Physical and Virtual Debit Card available through the CIMB app.</li>
-                        <li>Account holders who maintain a minimum ADB of P5,000 for one month will be able to enjoy Free life insurance.</li>
+                        <li>Account holders who maintain a minimum ADB of P5,000 for one month will be able to enjoy free life insurance.</li>
                         <li>Learn more <a href="https://www.cimbbank.com.ph/en/digital-banking/our-products/upsave.html" target="_blank">here.</a></li>
                     </ul>
                 </div>    
@@ -326,7 +326,8 @@
                 </div>
                 <div class="interest-details">
                     <ul>
-                        <li>Earn 4% interest for Solo stash and 4.5% interest for Group Stash(owner + 2 participants).</li>
+                        <li>Earn 4% interest for Solo stash</li>
+                        <li>4.5% interest for Group Stash(owner + 2 participants).</li>
                         <li>Create up to 5 stashes (Solo and Group combined).</li>
                     </ul>
                 </div>
@@ -391,7 +392,7 @@
                 <div class="interest-details">
                     <ul>
                         <li>Create up to 5 goal accounts and earn 4% interest on each account for a duration of up to six (6) months.</li>
-                        <li>Interest rate applies to max Goal balance of P1 million. Any amount higher will not earn interest.</li>
+                        <li>Interest rate applies to max Goal balance of P1 million (any amount higher will not earn interest).</li>
                     </ul>
                 </div>
 
@@ -463,9 +464,9 @@
                 </div>
                 <div class="interest-details">
                     <ul>
-                        <li>Earn 3.50% interest for savings up to P4,999.99</li>
-                        <li>4.25% for savings of P5,000 or more up to P4,999,999.99</li>
-                        <li>1% for savings P5,000,000 and above.</li>
+                        <li>Earn 3.50% p.a. interest for savings up to P4,999.99</li>
+                        <li>4.25% p.a. for savings of P5,000 or more up to P4,999,999.99</li>
+                        <li>1% p.a. for savings P5,000,000 and above.</li>
                         <li>Daily crediting of interest earnings.</li><br>
                         <p class="details-header">Promo for new users only (valid until Nov. 30, 2023):</p>
                         <li>Earn 6% p.a. Account's ADB should be at least PHP 5,000.00</li>
@@ -501,9 +502,9 @@
                 </div>
                 <div class="interest-details">
                     <ul>
-                        <li>Earn 3.50% interest for savings up to P4,999.99</li>
-                        <li>4.25% for savings of P5,000 or more up to P4,999,999.99</li>
-                        <li>1% for savings P5,000,000 and above.</li>
+                        <li>Earn 3.50% p.a. interest for savings up to P4,999.99</li>
+                        <li>4.25% p.a. for savings of P5,000 or more up to P4,999,999.99</li>
+                        <li>1% p.a. for savings P5,000,000 and above.</li>
                         <li>Daily crediting of interest earnings.</li><br>
                         <p class="details-header">Promo for new users only (valid until Nov. 30, 2023):</p>
                         <li>Earn 6% p.a. Account's ADB should be at least PHP 5,000.00</li>
@@ -539,7 +540,8 @@
                 </div>
                 <div class="interest-details">
                     <ul>
-                        <li>Earn 3% interest p.a. for savings below P5,000,000 and 4% interest for P5,000,000 and above.</li>
+                        <li>Earn 3% p.a. interest for savings below P5,000,000.</li>
+                        <li>4% p.a. for P5,000,000 and above.</li>
                     </ul>
                 </div>
 
@@ -568,7 +570,7 @@
                 </div>
                 <div class="interest-details">
                     <ul>
-                        <li>Earn 2.5% interest per annum on your savings(no limit).</li>
+                        <li>Earn 2.5% p.a. interest on your savings(no limit).</li>
                     </ul>
                 </div>
 
@@ -580,7 +582,7 @@
                         <li>ATM/Debit card available.</li>
                         <li>Generate Bank statement.</li>
                         <li>Savings account Analytics.</li>
-                        <li>Access to Bills payment, Insurance, Loans, and Mobile load.</li>
+                        <li>Access to Bills payment, Insurance, Loans, and Mobile load services.</li>
                         <li>Learn more <a href="https://www.komo.ph/" target="_blank">here.</a></li>
                     </ul>
                 </div> 
