Change the hero image/statement and made it smaller

--- a/index.html
+++ b/index.html
@@ -40,9 +40,8 @@
 
     <main>
         <section id="home">
-            <h2>Easily compare and discover<br>financial products</h2>
+            <h2>Compare financial products, easily!</h2>
             <p>No more checking of different websites.</p>
-            <p>Save time and find the best financial products for your needs.</p>
         </section>
 
         <section id="savings">
