Fix all the font size to be mobile responsive

--- a/index.html
+++ b/index.html
@@ -83,12 +83,12 @@
                 </div>
                 <div class="interest-details">
                     <ul>
-                        <li>Earn 6.5% interest on savings up to P49,700.</li>
+                        <li>Earn 6.5% p.a. on savings up to P49,700.</li>
                         <li>Excess of P49,700 will not earn interest.</li>
                         <li>Maximum limit for the savings account is capped at P50,000.</li>
-                        <li>Monthly crediting of interest earnings.</li><br>
+                        <li>Monthly interest crediting.</li><br>
                         <p class="details-header">Key features:</p>
-                        <li>Access Bills payment, Insurance, Telemedicine services, and Loan offers.</li>
+                        <li>Access Bills payment, Insurance, Telemedicine, and Loan offers.</li>
                         <li>Free transfers from RCBC to DiskarTech and vice versa.</li>
                         <li>Learn more <a href="https://diskartech.ph/faqs/" target="_blank">here.</a></li>
                     </ul>
@@ -110,12 +110,12 @@
                 </div>
                 <div class="interest-details">
                     <ul>
-                        <li>Basic accounts earn 6% interest on savings up to P50,000.</li>
-                        <li>Upgraded accounts earn 6% interest on all deposited savings(no limit).</li>
-                        <li>Daily crediting of interest earnings.</li><br>
+                        <li>Basic accounts earn 6% p.a. on savings up to P50,000.</li>
+                        <li>Upgraded accounts earn 6% p.a. on all deposited savings(no limit).</li>
+                        <li>Daily interest crediting.</li><br>
                         <p class="details-header">Key features:</p>
                         <li>Transfer to other OwnBank accounts using mobile number.</li>
-                        <li>Access mobile load, Game credits, and Data plans services.</li>
+                        <li>Access Mobile load, Game credits, and Data plans services.</li>
                         <li>Learn more <a href="https://www.ownbank.com/help-center" target="_blank">here.</a></li>
                     </ul>
                 </div>
@@ -136,14 +136,14 @@
                 <div class="interest-details">
                     <ul>
                         <p class="details-header">Promo runs from Nov. 1 to Dec. 31, 2023:</p>
-                        <li>All accounts will earn 5% p.a. interest on all savings balances(no limit) for the months of Nov. and Dec.</li>
+                        <li>All accounts will earn 5% p.a. on all savings balances(no limit) for the months of Nov. & Dec.</li>
                         <li>Earn +1% p.a. by growing your Total ADB by at least Php 5,000.</li>
                         <li>Earn +2% p.a. by using your Virtual Debit Card.</li>
                         <li>Earn +3% p.a. by transacting using Virtual Debit Card, Bills payment or Buy Load.</li>
                         <li>Earn +4% p.a. by growing your total ADB by at least Php 50,000.</li>
-                        <li>Learn more <a href="https://www.cimbbank.com.ph/en/promotions/promotions/5-year-anniversary-deposit-promo.html" target="_blank">here.</a></li>
-                    </ul>
-                    <ul>
+                        <li>Monthly interest crediting.</li>
+                        <li>Learn more <a href="https://www.cimbbank.com.ph/en/promotions/promotions/5-year-anniversary-deposit-promo.html" target="_blank">here.</a></li><br>
+                        <p class="details-header">Key features:</p>
                         <li>Access your account through the GCash and CIMB app.</li>
                         <li>Request and download Bank Certificate.</li>
                         <li>Physical and Virtual Debit Card available through the CIMB app.</li>
@@ -169,14 +169,14 @@
                 <div class="interest-details">
                     <ul>
                         <p class="details-header">Promo runs from Nov. 1 to Dec. 31, 2023:</p>
-                        <li>All accounts will earn 5% p.a interest on all savings balances(no limit) for the months of Nov. and Dec.</li>
+                        <li>All accounts will earn 5% p.a on all savings balances(no limit) for the months of Nov. & Dec.</li>
                         <li>Earn +1% p.a. by growing your Total ADB by at least Php 5,000.</li>
                         <li>Earn +2% p.a. by using your Virtual Debit Card.</li>
                         <li>Earn +3% p.a. by transacting using Virtual Debit Card, Bills payment or Buy Load.</li>
                         <li>Earn +4% p.a. by growing your total ADB by at least Php 50,000.</li>
-                        <li>Learn more <a href="https://www.cimbbank.com.ph/en/promotions/promotions/5-year-anniversary-deposit-promo.html" target="_blank">here.</a></li>
-                    </ul>
-                    <ul>
+                        <li>Monthly interest crediting.</li>
+                        <li>Learn more <a href="https://www.cimbbank.com.ph/en/promotions/promotions/5-year-anniversary-deposit-promo.html" target="_blank">here.</a></li><br>
+                        <p class="details-header">Key features:</p>
                         <li>Access your account through the CIMB app.</li>
                         <li>Request and download Bank Certificate.</li>
                         <li>Physical and Virtual Debit Card available through the CIMB app.</li>
@@ -200,11 +200,10 @@
                 </div>
                 <div class="interest-details">
                     <ul>
-                        <li>Create up to 5 separate Go Save accounts and earn 5% interest for each account(no limit).
-                        </li>
-                    </ul>
-                    <ul>
-                        <li>Create up to 5 separate Go Save accounts, set customizable target amounts and timeframes for each.</li>
+                        <li>Create up to 5 separate Go Save accounts and earn 5% interest for each account(no limit).</li>
+                        <li>Monthly interest crediting.</li><br>
+                        <p class="details-header">Key features:</p>
+                        <li>Set customizable target amounts and timeframes for each Go Save accounts.</li>
                         <li>Schedule auto-saves or save your change when you shop.</li>
                         <li>Transfers to other local banks are free up to 3 times per week.</li>
                         <li>Get a free ATM debit card.</li>
@@ -228,12 +227,11 @@
                 </div>
                 <div class="interest-details">
                     <ul>
-                        <li>P0 - P5,000 - No interest.</li>
-                        <li>P5,000 - P1,000,000 - 5% p.a.</li>
-                        <li>Above P1,000,000 - 0.0625% p.a.</li>
-                        <li>Monthly crediting of interest earnings.</li>
-                    </ul>
-                    <ul>
+                        <li>P0 - P5,000 = No interest.</li>
+                        <li>P5,000 - P1,000,000 = 5% p.a.</li>
+                        <li>Above P1,000,000 = 0.0625% p.a.</li>
+                        <li>Monthly interest crediting.</li><br>
+                        <p class="details-header">Key features:</p>
                         <li>Bills payment, buy load, send money to other banks.</li>
                         <li>Free fund transfer to BanKo, BPI, and other local banks/e-wallets via Instapay.</li>
                         <li>Deposit via other banks and e-wallets.</li>
@@ -257,12 +255,11 @@
                 </div>
                 <div class="interest-details">
                     <ul>
-                        <li>Earn 4.5% interest for savings up to P250,000.</li>
-                        <li>Excess of P250,000 will earn 3% interest.</li>
-                        <li>Daily crediting of interest earnings.</li>
-                    </ul>
-                    <ul>
-                        <li>First fifteen (15) InstaPay and PESONet transfers to other banks or e-wallets per week are free.</li>
+                        <li>Earn 4.5% p.a. for savings up to P250,000.</li>
+                        <li>Excess of P250,000 will earn 3% p.a.</li>
+                        <li>Daily interest crediting.</li><br>
+                        <p class="details-header">Key features:</p>
+                        <li>Free 15 InstaPay and PESONet transfers to other banks or e-wallets per week.</li>
                         <li>Request and download Bank Certificate.</li>
                         <li>Transfer funds from ShopeePay to SeaBank anytime for free.</li>
                         <li>Learn more <a href="https://www.seabank.ph/product/savings" target="_blank">here.</a></li>
@@ -285,11 +282,11 @@
                 </div>
                 <div class="interest-details">
                     <ul>
-                        <li>Earn 4% interest for Solo stash</li>
-                        <li>4.5% interest for Group Stash(owner + 2 participants).</li>
+                        <li>Earn 4% p.a. for Solo stash.</li>
+                        <li>4.5% p.a. for Group Stash(owner + 2 participants).</li>
                         <li>Create up to 5 stashes (Solo and Group combined).</li>
-                    </ul>
-                    <ul>
+                        <li>Monthly interest crediting.</li><br>
+                        <p class="details-header">Key features:</p>
                         <li>Group Stash allows you to invite family and friends to contribute to your savings goal.</li>
                         <li>Physical and Virtual Debit Card available.</li>
                         <li>Access to Quick, Big, and Shop Installment Loan products.</li>
@@ -314,11 +311,10 @@
                 </div>
                 <div class="interest-details">
                     <ul>
-                        <li>Account opening starting September 1, 2023 onwards, will receive a 4% interest p.a.</li>
-                    </ul>
-                    <ul>
-                        <li>Daily crediting of interest earnings.</li>
-                        <li>Free InstaPay and Pesonet transfers.</li>
+                        <li>Earn 4% p.a. on your savings(no limit).</li>
+                        <li>Daily interest crediting.</li><br>
+                        <p class="details-header">Key features:</p>
+                        <li>Free InstaPay and PESONet transfers.</li>
                         <li>Learn more <a href="https://www.netbank.ph/netbank-mobile" target="_blank">here.</a></li>
                     </ul>
                 </div>
@@ -338,10 +334,10 @@
                 </div>
                 <div class="interest-details">
                     <ul>
-                        <li>Create up to 5 goal accounts and earn 4% interest on each account for a duration of up to six (6) months.</li>
+                        <li>Create up to 5 goal accounts and earn 4% p.a. on each account for a duration of up to six (6) months.</li>
                         <li>Interest rate applies to max Goal balance of P1 million (any amount higher will not earn interest).</li>
-                    </ul>
-                    <ul>
+                        <li>Monthly interest crediting.</li><br>
+                        <p class="details-header">Key features:</p>
                         <li>Access to all Maya app services and features.</li>
                         <li>5x free InstaPay transfers per month.</li>
                         <li>Physical and Virtual Debit Card available via the Maya app.</li>
@@ -364,17 +360,17 @@
                 </div>
                 <div class="interest-details">
                     <ul>
-                        <li>Earn a base rate of 3.5% interest, which applies to savings up to P5,000,000. Excess of P5M will not earn interest.</li><br>
+                        <li>Earn a base rate of 3.5% p.a., which applies to savings up to P5,000,000. Excess of P5M will not earn interest.</li>
+                        <li>Daily interest crediting.</li><br>
                         <p class="details-header">Promo runs November 1, 2023 to January 31, 2024:</p>
                         <li>Get up to 6% p.a. with a total spend of P1,000.</li>
                         <li>Get up to 10% p.a. with a total spend of Php35,000.</li>
                         <li>Get a bonus +1% p.a. when you refer a friend.</li>
                         <li>Get an extra +1% p.a. if you're a Smart Postpaid subscriber.</li>
-                        <li>New users will have +8.5% interest p.a. with a total spend of Php500 on their first month on Maya Savings.</li>
+                        <li>New users will have +8.5% p.a. with a total spend of Php500 on their first month on Maya Savings.</li>
                         <li>All bonus interest rates only applies to max balance of up to Php100,000.</li>
-                        <li>Learn more <a href="https://www.maya.ph/deals/savings/boost-your-interest-up-to-14-pa-when-you-pay-with-maya-2023-november" target="_blank">here.</a></li>
-                    </ul>
-                    <ul>
+                        <li>Learn more <a href="https://www.maya.ph/deals/savings/boost-your-interest-up-to-14-pa-when-you-pay-with-maya-2023-november" target="_blank">here.</a></li><br>
+                        <p class="details-header">Key features:</p>
                         <li>Access to all Maya app services and features.</li>
                         <li>5x free InstaPay transfers per month.</li>
                         <li>Physical and Virtual Debit Card available via the Maya app.</li>
@@ -397,15 +393,14 @@
                 </div>
                 <div class="interest-details">
                     <ul>
-                        <li>Earn 3.50% p.a. interest for savings up to P4,999.99</li>
+                        <li>Earn 3.50% p.a. for savings up to P4,999.99</li>
                         <li>4.25% p.a. for savings of P5,000 or more up to P4,999,999.99</li>
                         <li>1% p.a. for savings P5,000,000 and above.</li>
-                        <li>Daily crediting of interest earnings.</li><br>
+                        <li>Daily interest crediting.</li><br>
                         <p class="details-header">Promo for new users only (valid until Nov. 30, 2023):</p>
                         <li>Earn 6% p.a. Account's ADB should be at least PHP 5,000.00</li>
-                        <li>Learn more <a href="https://uno.bank/promos-and-offers/" target="_blank">here.</a></li>
-                    </ul>
-                    <ul>
+                        <li>Learn more <a href="https://uno.bank/promos-and-offers/" target="_blank">here.</a></li><br>
+                        <p class="details-header">Key features:</p>
                         <li>Access your account through GCash and UNO Digital Bank app.</li>
                         <li>Free life insurance coverage worth PHP50,000 for a minimum monthly ADB of PHP10,000.</li>
                         <li>Physical and Virtual Debit Card available via UNO Digital Bank app.</li>
@@ -429,15 +424,14 @@
                 </div>
                 <div class="interest-details">
                     <ul>
-                        <li>Earn 3.50% p.a. interest for savings up to P4,999.99</li>
+                        <li>Earn 3.50% p.a. for savings up to P4,999.99</li>
                         <li>4.25% p.a. for savings of P5,000 or more up to P4,999,999.99</li>
                         <li>1% p.a. for savings P5,000,000 and above.</li>
-                        <li>Daily crediting of interest earnings.</li><br>
+                        <li>Daily interest crediting.</li><br>
                         <p class="details-header">Promo for new users only (valid until Nov. 30, 2023):</p>
                         <li>Earn 6% p.a. Account's ADB should be at least PHP 5,000.00</li>
-                        <li>Learn more <a href="https://uno.bank/promos-and-offers/" target="_blank">here.</a></li>
-                    </ul>
-                    <ul>
+                        <li>Learn more <a href="https://uno.bank/promos-and-offers/" target="_blank">here.</a></li><br>
+                        <p class="details-header">Key features:</p>
                         <li>Access your account through the UNO Digital Bank app.</li>
                         <li>Free life insurance coverage worth PHP50,000 for a minimum monthly ADB of PHP10,000.</li>
                         <li>Physical and Virtual Debit Card available via UNO Digital Bank app.</li>
@@ -460,10 +454,10 @@
                 </div>
                 <div class="interest-details">
                     <ul>
-                        <li>Earn 3% p.a. interest for savings below P5,000,000.</li>
+                        <li>Earn 3% p.a. for savings below P5,000,000.</li>
                         <li>4% p.a. for P5,000,000 and above.</li>
-                    </ul>
-                    <ul>
+                        <li>Monthly interest crediting.</li><br>
+                        <p class="details-header">Key features:</p>
                         <li>Access to Bills payment.</li>
                         <li>Learn more <a href="https://uniondigitalbank.io/en/product-rates-fees" target="_blank">here.</a></li>
                     </ul>
@@ -474,7 +468,7 @@
                 <div class="banks-logo">
                     <img src="komo-logo.png" alt="komo bank logo">
                 </div>
-                <div class="banks-savings">Komo</div>
+                <div class="banks-savings">Komo Savings</div>
                 <div class="banks-interest">
                     <p class="interest">2.5%</p>
                 </div>
@@ -484,13 +478,13 @@
                 </div>
                 <div class="interest-details">
                     <ul>
-                        <li>Earn 2.5% p.a. interest on your savings(no limit).</li>
-                    </ul>
-                    <ul>
+                        <li>Earn 2.5% p.a. on your savings(no limit).</li>
+                        <li>Monthly interest crediting.</li><br>
+                        <p class="details-header">Key features:</p>
                         <li>ATM/Debit card available.</li>
                         <li>Generate Bank statement.</li>
                         <li>Savings account Analytics.</li>
-                        <li>Access to Bills payment, Insurance, Loans, and Mobile load services.</li>
+                        <li>Access to Bills payment, Mobile load, Insurance, and Loan offers.</li>
                         <li>Learn more <a href="https://www.komo.ph/" target="_blank">here.</a></li>
                     </ul>
                 </div>
