--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
             <h1><a href="#home">Lemoneyd</a></h1>
             <ul>
                 <li class="list-item">
-                    <a href="#savings">Savings</a>
+                    <a href="#savings">SA</a>
+                    <a href="#savings">TD</a>
+                    <a href="#savings">CC</a>
                 </li>
             </ul>
         </nav>        
