--- a/index.html
+++ b/index.html
@@ -501,7 +501,7 @@
             <div id="savings-wordings">
                 <h3>Best High-Interest Time Deposits of Digital Banks</h3>
                 <p>
-                    These are 100% online savings accounts with high interest rates. Best for building emergency fund.
+                    These are 100% online time deposits with high interest rates. Best for growing your savings.
                 </p>
             </div>
 
@@ -512,7 +512,7 @@
                 </div>
 
                 <div class="banks-header">
-                    <p>Savings Product</p>
+                    <p>Time Deposit</p>
                 </div>
                 
                 <div class="banks-header">
@@ -528,7 +528,7 @@
                 <div class="banks-logo">
                     <img src="ownbank.png" alt="ownbank logo">
                 </div>
-                <div class="banks-savings">Mobile Time Deposit</div>
+                <div class="banks-savings">OwnBank Mobile TD</div>
                 <div class="banks-interest">6.3% - 8%</div>
 
                 <div class="expand-button">
@@ -536,10 +536,13 @@
                 </div>
                 <div class="interest-details">
                     <ul>
-                        <li>Earn 6.5% p.a. on savings up to P49,700.</li>
-                        <li>Excess of P49,700 will not earn interest.</li>
-                        <li>Maximum limit for the savings account is capped at P50,000.</li>
-                        <li>Monthly interest crediting.</li><br>
+                        <p class="details-header">Term and Interest rate:</p>
+                        <li>7 days - 8% p.a. *For new users only (account is 30 days old or less)</li>
+                        <li>15 days - 6.3% p.a.</li>
+                        <li>30 days - 6.5% p.a.</li>
+                        <li>90 days - 6.8% p.a.</li>
+                        <li>180 days - 7% p.a.</li>
+                        <li>360 days - 7.5% p.a.</li><br>
                         <p class="details-header">Key features:</p>
                         <li>Access Bills payment, Insurance, Telemedicine, and Loan offers.</li>
                         <li>Free transfers from RCBC to DiskarTech and vice versa.</li>
@@ -553,7 +556,7 @@
                 <div class="banks-logo">
                     <img src="netbank-logo.png" alt="netbank logo">
                 </div>
-                <div class="banks-savings">Netbank Mobile Time Deposit</div>
+                <div class="banks-savings">Netbank Mobile TD</div>
                 <div class="banks-interest">
                     <p class="interest">6% - 7.5%</p>
                 </div>
@@ -563,9 +566,9 @@
                 </div>
                 <div class="interest-details">
                     <ul>
-                        <li>Basic accounts earn 6% p.a. on savings up to P50,000.</li>
-                        <li>Upgraded accounts earn 6% p.a. on all deposited savings(no limit).</li>
-                        <li>Daily interest crediting.</li><br>
+                        <p class="details-header">Term and Interest rate:</p>
+                        <li>6 months - 6% p.a.</li>
+                        <li>12 months - 7.5% p.a.</li>
                         <p class="details-header">Key features:</p>
                         <li>Transfer to other OwnBank accounts using mobile number.</li>
                         <li>Access Mobile load, Game credits, and Data plans services.</li>
@@ -578,7 +581,7 @@
                 <div class="banks-logo">
                     <img src="uniondigital-logo.png" alt="union digital bank logo">
                 </div>
-                <div class="banks-savings">UnionDigital Time Deposit</div>
+                <div class="banks-savings">UnionDigital TD</div>
                 <div class="banks-interest">
                     <p class="interest">5.5% - 6.75%</p>
                 </div>
@@ -588,14 +591,12 @@
                 </div>
                 <div class="interest-details">
                     <ul>
-                        <p class="details-header">Promo runs from Nov. 1 to Dec. 31, 2023:</p>
-                        <li>All accounts will earn 5% p.a. on all savings balances(no limit) for the months of Nov. & Dec.</li>
-                        <li>Earn +1% p.a. by growing your Total ADB by at least Php 5,000.</li>
-                        <li>Earn +2% p.a. by using your Virtual Debit Card.</li>
-                        <li>Earn +3% p.a. by transacting using Virtual Debit Card, Bills payment or Buy Load.</li>
-                        <li>Earn +4% p.a. by growing your total ADB by at least Php 50,000.</li>
-                        <li>Monthly interest crediting.</li>
-                        <li>Learn more <a href="https://www.cimbbank.com.ph/en/promotions/promotions/5-year-anniversary-deposit-promo.html" target="_blank">here.</a></li><br>
+                        <p class="details-header">Term and Interest rate:</p>
+                        <li>30 days - 5.5% p.a.</li>
+                        <li>60 days - 5.75% p.a.</li>
+                        <li>90 days - 6.25% p.a.</li>
+                        <li>180 days - 6.5% p.a.</li>
+                        <li>1 year - 6.75% p.a.</li>
                         <p class="details-header">Key features:</p>
                         <li>Access your account through the GCash and CIMB app.</li>
                         <li>Request and download Bank Certificate.</li>
@@ -606,12 +607,11 @@
                 </div>
 
 
-
                     <!-- Row 4 -->
                 <div class="banks-logo">
-                    <img src="unogcash-logo.png" alt="unobank gcash logo">
+                    <img src="uno-logo.png" alt="unobank bank logo">
                 </div>
-                <div class="banks-savings">#UNOearn (via GCash)</div>
+                <div class="banks-savings">#UNOboost (GCash & UNO)</div>
                 <div class="banks-interest">
                     <p class="interest">6.5%</p>
                 </div>
@@ -621,29 +621,23 @@
                 </div>
                 <div class="interest-details">
                     <ul>
-                        <p class="details-header">Promo runs from Nov. 1 to Dec. 31, 2023:</p>
-                        <li>All accounts will earn 5% p.a on all savings balances(no limit) for the months of Nov. & Dec.</li>
-                        <li>Earn +1% p.a. by growing your Total ADB by at least Php 5,000.</li>
-                        <li>Earn +2% p.a. by using your Virtual Debit Card.</li>
-                        <li>Earn +3% p.a. by transacting using Virtual Debit Card, Bills payment or Buy Load.</li>
-                        <li>Earn +4% p.a. by growing your total ADB by at least Php 50,000.</li>
-                        <li>Monthly interest crediting.</li>
-                        <li>Learn more <a href="https://www.cimbbank.com.ph/en/promotions/promotions/5-year-anniversary-deposit-promo.html" target="_blank">here.</a></li><br>
+                        <p class="details-header">Term and Interest rate:</p>
+                        <li>3, 4, 5, 6, 7, 8, 9, 10, 11, up to 12 months - 6.5%</li>
                         <p class="details-header">Key features:</p>
-                        <li>Access your account through the CIMB app.</li>
-                        <li>Request and download Bank Certificate.</li>
-                        <li>Physical and Virtual Debit Card available through the CIMB app.</li>
-                        <li>Account holders who maintain a minimum ADB of P5,000 for one month will be able to enjoy free life insurance.</li>
-                        <li>Learn more <a href="https://www.cimbbank.com.ph/en/digital-banking/our-products/upsave.html" target="_blank">here.</a></li>
+                        <li>Set customizable target amounts and timeframes for each Go Save accounts.</li>
+                        <li>Schedule auto-saves or save your change when you shop.</li>
+                        <li>Transfers to other local banks are free up to 3 times per week.</li>
+                        <li>Get a free ATM debit card.</li>
+                        <li>Earn Go Rewards points that you can redeem as cash, which will be credited to your account.</li>
+                        <li>Learn more <a href="https://www.gotyme.com.ph/" target="_blank">here.</a></li>
                     </ul>
                 </div>
-
 
                     <!-- Row 5 -->
                 <div class="banks-logo">
-                    <img src="unogcash-logo.png" alt="unobank gcash logo">
+                    <img src="uno-logo.png" alt="unobank bank logo">
                 </div>
-                <div class="banks-savings">#UNOboost (via GCash)</div>
+                <div class="banks-savings">#UNOearn (GCash &UNO)</div>
                 <div class="banks-interest">
                     <p class="interest">6.5%</p>
                 </div>
@@ -653,8 +647,9 @@
                 </div>
                 <div class="interest-details">
                     <ul>
-                        <li>Create up to 5 separate Go Save accounts and earn 5% interest for each account(no limit).</li>
-                        <li>Monthly interest crediting.</li><br>
+                        <p class="details-header">Term and Interest rate:</p>
+                        <li>12 months - 6.5% p.a.</li>
+                        <li>24 months - 6.5% p.a.</li>
                         <p class="details-header">Key features:</p>
                         <li>Set customizable target amounts and timeframes for each Go Save accounts.</li>
                         <li>Schedule auto-saves or save your change when you shop.</li>
@@ -664,63 +659,10 @@
                         <li>Learn more <a href="https://www.gotyme.com.ph/" target="_blank">here.</a></li>
                     </ul>
                 </div>
+
 
 
                     <!-- Row 6 -->
-                <div class="banks-logo">
-                    <img src="uno-logo.png" alt="unobank bank logo">
-                </div>
-                <div class="banks-savings">#UNOearn (via UNO)</div>
-                <div class="banks-interest">
-                    <p class="interest">6.5%</p>
-                </div>
-
-                <div class="expand-button">
-                    <i class="fa-solid fa-chevron-down" style="color: #000000;"></i>
-                </div>
-                <div class="interest-details">
-                    <ul>
-                        <li>Create up to 5 separate Go Save accounts and earn 5% interest for each account(no limit).</li>
-                        <li>Monthly interest crediting.</li><br>
-                        <p class="details-header">Key features:</p>
-                        <li>Set customizable target amounts and timeframes for each Go Save accounts.</li>
-                        <li>Schedule auto-saves or save your change when you shop.</li>
-                        <li>Transfers to other local banks are free up to 3 times per week.</li>
-                        <li>Get a free ATM debit card.</li>
-                        <li>Earn Go Rewards points that you can redeem as cash, which will be credited to your account.</li>
-                        <li>Learn more <a href="https://www.gotyme.com.ph/" target="_blank">here.</a></li>
-                    </ul>
-                </div>
-
-                    <!-- Row 7 -->
-                <div class="banks-logo">
-                    <img src="uno-logo.png" alt="unobank bank logo">
-                </div>
-                <div class="banks-savings">#UNOboost (via UNO)</div>
-                <div class="banks-interest">
-                    <p class="interest">6.5%</p>
-                </div>
-
-                <div class="expand-button">
-                    <i class="fa-solid fa-chevron-down" style="color: #000000;"></i>
-                </div>
-                <div class="interest-details">
-                    <ul>
-                        <li>Create up to 5 separate Go Save accounts and earn 5% interest for each account(no limit).</li>
-                        <li>Monthly interest crediting.</li><br>
-                        <p class="details-header">Key features:</p>
-                        <li>Set customizable target amounts and timeframes for each Go Save accounts.</li>
-                        <li>Schedule auto-saves or save your change when you shop.</li>
-                        <li>Transfers to other local banks are free up to 3 times per week.</li>
-                        <li>Get a free ATM debit card.</li>
-                        <li>Earn Go Rewards points that you can redeem as cash, which will be credited to your account.</li>
-                        <li>Learn more <a href="https://www.gotyme.com.ph/" target="_blank">here.</a></li>
-                    </ul>
-                </div>
-
-
-
-                    <!-- Row 8 -->
                 <div class="banks-logo">
                     <img src="tonik-logo.png" alt="tonik bank logo">
                 </div>
@@ -734,9 +676,13 @@
                 </div>
                 <div class="interest-details">
                     <ul>
-                        <li>Earn 4% p.a. for Solo stash.</li>
-                        <li>4.5% p.a. for Group Stash(owner + 2 participants).</li>
-                        <li>Create up to 5 stashes (Solo and Group combined).</li>
+                        <p class="details-header">Term and Interest rate:</p>
+                        <li>6 months - 6% p.a.</li>
+                        <li>9 months - 4.5% p.a.</li>
+                        <li>12 months - 4.75% p.a.</li>
+                        <li>18 months - 5% p.a.</li>
+                        <li>24 months - 5.25% p.a.</li>
+                        <li>Create8 up to 5 stashes (Solo and Group combined).</li>
                         <li>Monthly interest crediting.</li><br>
                         <p class="details-header">Key features:</p>
                         <li>Group Stash allows you to invite family and friends to contribute to your savings goal.</li>
