Fix the interest rates of savings account until Row 11

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                         <li>Daily interest crediting.</li><br>
                         <p class="details-header">Key features:</p>
                         <li>Transfer to other OwnBank accounts using mobile number.</li>
-                        <li>Access Mobile load, Game credits, and Data plans services.</li>
+                        <li>Access Mobile load, Game credits, Data plans, and Personal Accident Insurance.</li>
                         <li>Learn more <a href="https://www.ownbank.com/help-center" target="_blank">here.</a></li>
                     </ul>
                 </div>
@@ -234,7 +234,7 @@
                         <li>Above P1,000,000 = 0.0625% p.a.</li>
                         <li>Monthly interest crediting.</li><br>
                         <p class="details-header">Key features:</p>
-                        <li>Bills payment, buy load, send money to other banks.</li>
+                        <li>Bills payment, Mobile load, and Bank transfer.</li>
                         <li>Free fund transfer to BanKo, BPI, and other local banks/e-wallets via Instapay.</li>
                         <li>Deposit via other banks and e-wallets.</li>
                         <li>You can also visit BanKo branches and accredited BanKo cash agents to deposit and withdraw cash.</li>
@@ -257,8 +257,8 @@
                 </div>
                 <div class="interest-details">
                     <ul>
-                        <li>Earn 4.5% p.a. for savings up to P250,000.</li>
-                        <li>Excess of P250,000 will earn 3% p.a.</li>
+                        <li>Earn 4.5% p.a. for savings up to P300,000.</li>
+                        <li>Excess of P300,000 will earn 3% p.a.</li>
                         <li>Daily interest crediting.</li><br>
                         <p class="details-header">Key features:</p>
                         <li>Free 15 InstaPay and PESONet transfers to other banks or e-wallets per week.</li>
